kubernetes/apps/kubevirt/home-assistant/app/endpointslice.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.erwanleboucher.dev/discovery.k8s.io/endpointslice_v1.json
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: home-assistant
  namespace: home-assistant
  labels:
    kubernetes.io/service-name: home-assistant
addressType: IPv4
endpoints:
  - addresses:
      - 192.168.1.153
    conditions:
      ready: true
ports:
  - name: http
    port: 8123
    protocol: TCP
