kubernetes/apps/kubevirt/home-assistant/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home-assistant
spec:
  ports:
    - name: http
      port: 8123
      targetPort: 8123
  type: ClusterIP
